fixed dark mode selct component bug

--- a/src/App.css
+++ b/src/App.css
@@ -38,19 +38,20 @@ header,
 .btn.dark {
   background: #2b2f33;
   color: #fd413c;
+  border-color: #fd413c;
 }
 .btn.dark:focus,
 .account.dark a:focus {
   outline: 1px solid #fd413c;
 }
-/* .btn:hover {
+.btn:hover {
   color: #fff;
   background-color: #fd7b38;
 }
 .btn.dark:hover {
   color: #fff;
   background-color: #fd413c;
-} */
+}
 .account {
   margin-top: 30px;
 }
